--- a/src/app/tasks/checker-inbox-and-tasks-tabs/checker-inbox/checker-inbox.component.html
+++ b/src/app/tasks/checker-inbox-and-tasks-tabs/checker-inbox/checker-inbox.component.html
@@ -8,13 +8,13 @@
     </div>
     <div fxFlex="60%" fxLayoutGap="0.5rem">
       <button mat-raised-button color="success" (click)="approveChecker()">
-        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;Approve
+        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Approve'| translate }}
       </button>
       <button mat-raised-button color="warn" (click)="deleteChecker()">
-        <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+        <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Delete'| translate }}
       </button>
       <button mat-raised-button color="reject" (click)="rejectChecker()">
-        <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;Reject
+        <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Reject'| translate }}
       </button>
     </div>
   </div>
@@ -24,7 +24,7 @@
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
       <mat-form-field fxFlex="31%">
-        <mat-label>From Date</mat-label>
+        <mat-label>{{'Task.CheckerInboxAndTasksTab.CheckerInbox.makerDateTimeFrom'| translate }}</mat-label>
         <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="makerDateTimeFromPicker"
           formControlName="makerDateTimeFrom">
         <mat-datepicker-toggle matSuffix [for]="makerDateTimeFromPicker"></mat-datepicker-toggle>
@@ -32,7 +32,7 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>To Date</mat-label>
+        <mat-label>{{'Task.CheckerInboxAndTasksTab.CheckerInbox.makerDateTimeto'| translate }}</mat-label>
         <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="makerDateTimetoPicker"
           formControlName="makerDateTimeto">
         <mat-datepicker-toggle matSuffix [for]="makerDateTimetoPicker"></mat-datepicker-toggle>
@@ -40,7 +40,7 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Action</mat-label>
+        <mat-label>{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Action'| translate }}</mat-label>
         <mat-select formControlName="actionName">
           <mat-option *ngFor="let action of uniqueActionName" [value]="action">
             {{ action }}
@@ -49,7 +49,7 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Entity</mat-label>
+        <mat-label>{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Entity'| translate }}</mat-label>
         <mat-select formControlName="entityName">
           <mat-option *ngFor="let entity of uniqueEntityName" [value]="entity">
             {{ entity }}
@@ -58,11 +58,11 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Resource ID</mat-label>
+        <mat-label>{{'Task.CheckerInboxAndTasksTab.CheckerInbox.resourceId'| translate }}</mat-label>
         <input matInput formControlName="resourceId">
       </mat-form-field>
 
-      <button mat-raised-button color="primary" id="search-button" (click)="search()">Search</button>
+      <button mat-raised-button color="primary" id="search-button" (click)="search()">{{'Task.CheckerInboxAndTasksTab.CheckerInbox.Search'| translate }}</button>
 
     </div>
 
@@ -84,32 +84,32 @@
     </ng-container>
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.ID'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.id }} </td>
     </ng-container>
 
     <ng-container matColumnDef="madeOnDate">
-      <th mat-header-cell *matHeaderCellDef> Made on Date </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.madeOnDate'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.madeOnDate | date }} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.Status'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.processingResult }} </td>
     </ng-container>
 
     <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef> User </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.User'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.maker }} </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.Action'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.actionName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="entity">
-      <th mat-header-cell *matHeaderCellDef> Entity </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.CheckerInbox.Entity'| translate }} </th>
       <td mat-cell *matCellDef="let makerChecker"> {{ makerChecker.entityName }} </td>
     </ng-container>
 
@@ -122,7 +122,7 @@
 
     <div class="message">
       <i class="fa fa-exclamation-circle alert-check fa-2x"></i>
-      No checker inbox data available for this search.
+      {{'Task.CheckerInboxAndTasksTab.CheckerInbox.message1'| translate }}
     </div>
 
   </div>
@@ -133,7 +133,7 @@
 
   <div class="message">
     <i class="fa fa-exclamation-circle alert-check fa-2x"></i>
-    No checker inbox data available for this account.
+    {{'Task.CheckerInboxAndTasksTab.CheckerInbox.message2'| translate }}
   </div>
 
 </div>
