--- a/src/app/tasks/checker-inbox-and-tasks-tabs/client-approval/client-approval.component.html
+++ b/src/app/tasks/checker-inbox-and-tasks-tabs/client-approval/client-approval.component.html
@@ -9,7 +9,7 @@
     <div fxFlex="60%">
       <button mat-raised-button color="success" *midasHasPermission="'ACTIVATE_CLIENT'"
         (click)="approveClients()">
-        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;Approve
+        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;{{'Task.CheckerInboxAndTasksTab.ClientApproval.Approve'| translate }}
       </button>
     </div>
   </div>
@@ -36,17 +36,17 @@
         </ng-container>
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.ClientApproval.Name'| translate }} </th>
           <td mat-cell *matCellDef="let element" class="view-details" [routerLink]="['../../clients', element.id]"> {{ element.displayName }} </td>
         </ng-container>
 
         <ng-container matColumnDef="accountNumber">
-          <th mat-header-cell *matHeaderCellDef> AccountNumber </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.ClientApproval.AccountNumber'| translate }} </th>
           <td mat-cell *matCellDef="let element" class="view-details" [routerLink]="['../../clients', element.id]"> {{ element.accountNo }} </td>
         </ng-container>
 
         <ng-container matColumnDef="staff">
-          <th mat-header-cell *matHeaderCellDef> Staff </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.ClientApproval.Staff'| translate }} </th>
           <td mat-cell *matCellDef="let element" class="view-details" [routerLink]="['../../clients', element.id]"> {{ element.staffName }} </td>
         </ng-container>
 
@@ -65,7 +65,7 @@
 
   <div class="message">
     <i class="fa fa-exclamation-circle alert-check"></i>
-    No pending loans for approval.
+    {{'Task.CheckerInboxAndTasksTab.ClientApproval.message'| translate }}
   </div>
 
 </div>
