--- a/src/app/tasks/checker-inbox-and-tasks-tabs/loan-approval/loan-approval.component.html
+++ b/src/app/tasks/checker-inbox-and-tasks-tabs/loan-approval/loan-approval.component.html
@@ -8,7 +8,7 @@
     </div>
     <div fxFlex="60%">
       <button mat-raised-button color="success" *midasHasPermission="'APPROVE_LOAN'" (click)="approveLoan()">
-        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;Approve
+        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;{{'Task.CheckerInboxAndTasksTab.LoanApproval.Approve'| translate }}
       </button>
     </div>
   </div>
@@ -36,24 +36,24 @@
         </ng-container>
 
         <ng-container matColumnDef="clientName">
-          <th mat-header-cell *matHeaderCellDef> Client </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.Client'| translate }} </th>
           <td mat-cell *matCellDef="let loan" class="view-details" [routerLink]="['../../clients', loan.clientId, 'general']">
             {{ loan.clientName }} </td>
         </ng-container>
 
         <ng-container matColumnDef="loan">
-          <th mat-header-cell *matHeaderCellDef> Loan </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.Loan'| translate }} </th>
           <td mat-cell *matCellDef="let loan" class="view-details" [routerLink]="['../../clients', loan.clientId, 'loans-accounts', 'loan.id']">
             {{ loan.loanProductName}}({{loan.accountNo}}) </td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
-          <th mat-header-cell *matHeaderCellDef> Amount </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.Amount'| translate }} </th>
           <td mat-cell *matCellDef="let loan"> {{ loan.principal | number}} </td>
         </ng-container>
 
         <ng-container matColumnDef="loanPurpose">
-          <th mat-header-cell *matHeaderCellDef> Loan Purpose </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.xxx'| translate }}Loan Purpose </th>
           <td mat-cell *matCellDef="let loan"> {{ loan.loanPurposeName }} </td>
         </ng-container>
 
@@ -72,7 +72,7 @@
 
   <div class="message">
     <i class="fa fa-exclamation-circle alert-check"></i>
-    No pending loans for approval.
+    {{'Task.CheckerInboxAndTasksTab.LoanApproval.message'| translate }}
   </div>
 
 </div>
