--- a/src/app/tasks/view-checker-inbox/view-checker-inbox.component.html
+++ b/src/app/tasks/view-checker-inbox/view-checker-inbox.component.html
@@ -1,12 +1,12 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="1%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="success" (click)="approveChecker()">
-    <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;Approve
+    <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;{{'Task.ViewCheckerInbox.Approve'| translate }}
   </button>
   <button mat-raised-button color="warn" (click)="deleteChecker()">
-    <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+    <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{'Task.ViewCheckerInbox.Delete'| translate }}
   </button>
   <button mat-raised-button color="reject" (click)="rejectChecker()">
-    <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;Reject
+    <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;{{'Task.ViewCheckerInbox.Reject'| translate }}
   </button>
 </div>
 
@@ -18,56 +18,56 @@
 
       <div fxLayout="row wrap" fxLayout.lt-md="column">
 
-        <h2 class="mat-h2" fxFlexFill> View Checker Inbox </h2>
+        <h2 class="mat-h2" fxFlexFill> {{'Task.ViewCheckerInbox.ViewCheckerInbox'| translate }} </h2>
 
         <mat-divider [inset]="true"></mat-divider>
 
-        <h3 class="mat-h3" fxFlexFill>Details</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Task.ViewCheckerInbox.Details'| translate }}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">ID:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.ID'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.id }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Status:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.Status'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.processingResult }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">User:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.User'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.maker }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Action:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.Action'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.actionName }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Entity:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.Entity'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.entityName }}</span>
         </div>
 
         <div fxFlexFill *ngIf="checkerInboxDetail.resourceId">
-          <span fxFlex="40%">Resource ID:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.resourceId'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.resourceId }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Date:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.Date'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.madeOnDate | date}}</span>
         </div>
 
         <div fxFlexFill *ngIf="checkerInboxDetail.officeName">
-          <span fxFlex="40%">Office:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.Office'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.officeName }}</span>
         </div>
 
         <div fxFlexFill *ngIf="checkerInboxDetail.savingsAccountNo">
-          <span fxFlex="40%">Savings Account Number:</span>
+          <span fxFlex="40%">{{'Task.ViewCheckerInbox.savingsAccountNo'| translate }}:</span>
           <span fxFlex="60%">{{ checkerInboxDetail.savingsAccountNo }}</span>
         </div>
 
@@ -78,7 +78,7 @@
 
         <ng-container *ngIf="displayJSONData">
 
-          <h3 class="mat-h3" fxFlexFill>Command</h3>
+          <h3 class="mat-h3" fxFlexFill>{{'Task.ViewCheckerInbox.Command'| translate }}</h3>
 
           <mat-divider [inset]="true"></mat-divider>
 
