--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_TEMPLATE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Template
+    {{'TemplatesComponent.CreateTemplate'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'TemplatesComponent.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,17 +19,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="entity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Entity </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'TemplatesComponent.Entity'| translate }} </th>
         <td mat-cell *matCellDef="let template"> {{ template.entity }} </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'TemplatesComponent.Type'| translate }} </th>
         <td mat-cell *matCellDef="let template"> {{ template.type }} </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'TemplatesComponent.Name'| translate }} </th>
         <td mat-cell *matCellDef="let template"> {{ template.name }} </td>
       </ng-container>
 
