--- a/src/app/terminals/rate-terminal/rate-terminal.component.html
+++ b/src/app/terminals/rate-terminal/rate-terminal.component.html
@@ -1,7 +1,7 @@
 <table mat-table class="mat-elevation-z8 example-table" multiTemplateDataRows [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="transferId">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Transfer ID</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RateTerminal.transferId" | translate }}</th>
     <td mat-cell *matCellDef="let value">
         <a [routerLink]=""
         (click)="openDialog(value)"
@@ -10,7 +10,7 @@
   </ng-container>
 
   <ng-container matColumnDef="cardType">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Loại thẻ</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RateTerminal.cardType" | translate }}</th>
     <td mat-cell *matCellDef="let value" style="word-break: break-word;">
       <label>
         {{ value.cardType }}
@@ -20,7 +20,7 @@
   </ng-container>
 
   <ng-container matColumnDef="rate">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Tỷ lệ</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RateTerminal.rate" | translate }}</th>
     <td mat-cell *matCellDef="let value" style="word-break: break-word;">
       <label>
         {{ value.rate }}
