--- a/src/app/terminals/request-transfer/request-transfer.component.html
+++ b/src/app/terminals/request-transfer/request-transfer.component.html
@@ -3,14 +3,14 @@
     <mat-card-content>
       <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"  [formGroup]="formDate">
         <mat-form-field fxFlex="31%">
-          <mat-label>Từ ngày</mat-label>
+          <mat-label>{{ "Terminal_Component.RequestTransfer.fromDate" | translate }}</mat-label>
           <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
           <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
           <mat-datepicker #transactionDateFromPicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxFlex="31%">
-          <mat-label>Đến ngày</mat-label>
+          <mat-label>{{ "Terminal_Component.RequestTransfer.toDate" | translate }}</mat-label>
           <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
           <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
           <mat-datepicker #transactionDateToPicker></mat-datepicker>
@@ -23,7 +23,7 @@
           color="primary"
           mat-raised-button
         >
-          Tìm kiếm &nbsp;<i class="fa fa-search"></i>
+        {{ "Terminal_Component.RequestTransfer.search" | translate }} &nbsp;<i class="fa fa-search"></i>
         </button>
       </div>
 
@@ -36,12 +36,12 @@
         </mat-form-field> -->
 
         <mat-form-field fxFlex="31">
-          <mat-label>Tìm theo terminal ID</mat-label>
+          <mat-label>{{ "Terminal_Component.RequestTransfer.terminalId" | translate }}</mat-label>
           <input matInput formControlName="terminalId">
         </mat-form-field>
 
         <mat-form-field fxFlex="31">
-          <mat-label>Tìm theo người nhận</mat-label>
+          <mat-label>{{ "Terminal_Component.RequestTransfer.receiverExternalId" | translate }}</mat-label>
           <input matInput formControlName="receiverExternalId">
         </mat-form-field>
 
@@ -57,7 +57,7 @@
         <table mat-table class="mat-elevation-z8 example-table" multiTemplateDataRows [dataSource]="dataShow" matSort>
 
           <ng-container matColumnDef="terminalId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>TERMINAL ID</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.terminalId2" | translate }}</th>
             <td mat-cell *matCellDef="let value">
                 <a [routerLink]=""
                 (click)="openDialog(value)"
@@ -66,7 +66,7 @@
           </ng-container>
 
           <ng-container matColumnDef="senderExternalId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>NGƯỜI GỬI</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.senderExternalId" | translate }}</th>
             <td mat-cell *matCellDef="let value" style="word-break: break-word;">
               <label>
                 {{ value.senderExternalId }}
@@ -76,7 +76,7 @@
           </ng-container>
 
           <ng-container matColumnDef="receiverExternalId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>NGƯỜI NHẬN</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.receiverExternalId2" | translate }}</th>
             <td mat-cell *matCellDef="let value" style="word-break: break-word;">
               <label>
                 {{ value.receiverExternalId }}
@@ -86,7 +86,7 @@
           </ng-container>
 
           <ng-container matColumnDef="rate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>RATE</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.RATE" | translate }}</th>
             <td mat-cell *matCellDef="let value" style="word-break: break-word;">
               <label>
                 {{ value.rate }}
@@ -96,7 +96,7 @@
           </ng-container>
 
           <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>TRẠNG THÁI</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.status" | translate }}</th>
             <td mat-cell *matCellDef="let value" style="word-break: break-word;">
               <label>
                 {{ value.status }}
@@ -106,7 +106,7 @@
           </ng-container>
 
           <ng-container matColumnDef="createdBy">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>NGƯỜI TẠO</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.createdBy" | translate }}</th>
             <td mat-cell *matCellDef="let value" style="word-break: break-word;">
               <label>
                 {{ value.createdBy }}
@@ -116,7 +116,7 @@
           </ng-container>
 
           <ng-container matColumnDef="createdDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>NGÀY TẠO</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "Terminal_Component.RequestTransfer.createdDate" | translate }}</th>
             <td mat-cell fxHide fxShow.gt-md style="word-wrap: break-word;" *matCellDef="let value">
               <label>
                 {{ value.createdDate | date: "dd-MM-yyyy" }}
@@ -166,7 +166,7 @@
       <ng-template matMenuContent let-form="form" style="width: 50px">
         <button (click)="deleteRow(form)" mat-menu-item>
           <img style="margin-top: 5px" src="assets/images/icons/remove.svg" />
-          &nbsp;Xóa
+          &nbsp;{{ "Terminal_Component.RequestTransfer.xxx" | translate }}Xóa
         </button>
       </ng-template>
     </mat-menu>
