--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -60,8 +60,8 @@
 
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Người tạo <br />
-          (Đang dùng)
+          {{ 'Terminal_Component.tableTerminal.createdByUser'| translate}}<br />
+          {{ 'Terminal_Component.tableTerminal.using'| translate}}
            </th>
         <td mat-cell *matCellDef="let terminal">
           <!-- {{ terminal.createdBy }}
@@ -88,12 +88,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Terminal_Component.labelAction'| translate}} </th>
         <td mat-cell *matCellDef="let terminal">
           <label *midasHasPermission="'POS_UPDATE'">
-            <button title="Điều chuyển máy bán hàng" *ngIf="terminal.isTransferAble"  mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName,  filter.value)">
+            <button [title]="'Terminal_Component.tableTerminal.TransferAble'| translate" *ngIf="terminal.isTransferAble"  mat-raised-button color="primary" (click)="addTransferDialogByTransactionId(terminal.terminalId, terminal.terminalName,  filter.value)">
               <fa-icon icon="sync"></fa-icon>
             </button>
           </label>
           <label *midasHasPermission="'POS_CREATE'" >
-          <button title="Chỉnh sửa thông tin máy bán hàng" mat-raised-button color="primary" [routerLink]="[terminal.terminalId,'edit']">
+          <button [title]="'Terminal_Component.tableTerminal.editTerminalInfo'| translate" mat-raised-button color="primary" [routerLink]="[terminal.terminalId,'edit']">
             <fa-icon icon="edit"></fa-icon>
           </button>
           </label>
