--- a/src/app/accounting/create-journal-entry/create-journal-entry.component.html
+++ b/src/app/accounting/create-journal-entry/create-journal-entry.component.html
@@ -44,7 +44,7 @@
                     {{ affectedGLEntryDebit.name + ' (' + affectedGLEntryDebit.glCode + ')' }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="debits.at(i).controls.glAccountId.hasError('required')">
+                <mat-error *ngIf="debits.at(i).get('glAccountId')!.hasError('required')">
                   {{ "Accounting.CreateJournalEntryComponent.errglAccountId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -52,7 +52,7 @@
               <mat-form-field fxFlex="43%">
                 <mat-label>{{ "Accounting.CreateJournalEntryComponent.amount" | translate }}</mat-label>
                 <input type="number" matInput required formControlName="amount">
-                <mat-error *ngIf="debits.at(i).controls.amount.hasError('required')">
+                <mat-error *ngIf="debits.at(i).get('amount')!.hasError('required')">
                   {{ "Accounting.CreateJournalEntryComponent.erramount" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -82,7 +82,7 @@
                     {{ affectedGLEntryCredit.name + ' (' + affectedGLEntryCredit.glCode + ')' }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="credits.at(i).controls.glAccountId.hasError('required')">
+                <mat-error *ngIf="credits.at(i).get('glAccountId')!.hasError('required')">
                   {{ "Accounting.CreateJournalEntryComponent.errglAccountIdCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -90,7 +90,7 @@
               <mat-form-field fxFlex="43%">
                 <mat-label>{{ "Accounting.CreateJournalEntryComponent.amountCredit" | translate }}</mat-label>
                 <input type="number" matInput required formControlName="amount">
-                <mat-error *ngIf="credits.at(i).controls.amount.hasError('required')">
+                <mat-error *ngIf="credits.at(i).get('amount')!.hasError('required')">
                   {{ "Accounting.CreateJournalEntryComponent.erramountCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
