--- a/src/app/accounting/frequent-postings/frequent-postings.component.html
+++ b/src/app/accounting/frequent-postings/frequent-postings.component.html
@@ -58,7 +58,7 @@
                     {{ affectedGLEntryDebit.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="debits.at(i).controls.glAccountId.hasError('required')">
+                <mat-error *ngIf="debits.at(i).get('glAccountId')!.hasError('required')">
                   {{ "Accounting.FrequentPostingsComponent.errglAccountId" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -66,7 +66,7 @@
               <mat-form-field fxFlex="43%">
                 <mat-label>{{ "Accounting.FrequentPostingsComponent.amountDebit" | translate }}</mat-label>
                 <input currencyMask type="text" matInput required formControlName="amount">
-                <mat-error *ngIf="debits.at(i).controls.amount.hasError('required')">
+                <mat-error *ngIf="debits.at(i).get('amount')!.hasError('required')">
                   {{ "Accounting.FrequentPostingsComponent.erramountDebit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -96,7 +96,7 @@
                     {{ affectedGLEntryCredit.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="credits.at(i).controls.glAccountId.hasError('required')">
+                <mat-error *ngIf="credits.at(i).get('glAccountId')!.hasError('required')">
                   {{ "Accounting.FrequentPostingsComponent.errglAccountIdCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
@@ -104,7 +104,7 @@
               <mat-form-field fxFlex="43%">
                 <mat-label>{{ "Accounting.FrequentPostingsComponent.amountCredit" | translate }}</mat-label>
                 <input currencyMask type="text" matInput required formControlName="amount">
-                <mat-error *ngIf="credits.at(i).controls.amount.hasError('required')">
+                <mat-error *ngIf="credits.at(i).get('amount')!.hasError('required')">
                   {{ "Accounting.FrequentPostingsComponent.erramountCredit" | translate }}<strong>{{ "Accounting.strongRequire" | translate }}</strong>
                 </mat-error>
               </mat-form-field>
